2007-04-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimppickable.[ch]: added get_pixel_at() method to the
	GimpPickable interface. This gives direct access to the pixel
	without converting it to an RGB color.

	* app/core/gimpdrawable.c
	* app/core/gimpimagemap.c
	* app/core/gimpprojection.c: implement the new method and also use
	it to reimplement get_color_at().

	* app/core/gimpimage-crop.c (gimp_image_crop_guess_bgcolor): use
	gimp_pickable_get_pixel_at(). Fixes auto-shrink on indexed and
	grayscale images.

2007-04-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/sunras.c (set_color_table): guard against a
	possible stack overflow.

2007-04-27  Sven Neumann  <sven@gimp.org>

	* configure.in: use PANGO_DISABLE_DEPRECATED for pango < 1.17.

	* plug-ins/common/sample_colorize.c: removed unused variable.

2007-04-27  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on poppler-glib >= 0.4.1.

	* plug-ins/common/poppler.c: removed ifdefs to handle older
	versions of the poppler library. Removed "antialias" toggle from
	the procedure API and from the GUI; it's not supported by poppler.

2007-04-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/truchet.scm: fixed typo in procedure
	name (bug #433772).

2007-04-27  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/imagemap/imap_preferences.c
	* plug-ins/gflare/gflare.c
	* plug-ins/Lighting/lighting_ui.c
	* plug-ins/xjt/xjt.c
	* plug-ins/metadata/xmp-parse.c
	* plug-ins/flame/flame.c
	* plug-ins/common/curve_bend.c
	* plug-ins/common/compressor.c
	* plug-ins/common/channel_mixer.c
	* plug-ins/common/mail.c
	* plug-ins/common/CML_explorer.c
	* plug-ins/ifscompose/ifscompose.c: Open files in binary mode
	("rb" and "wb").

2007-04-26  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpparamspecs.[ch]: renamed GimpParamSpecString's
	flag "no_validate" to "allow_non_utf8".

	* tools/pdbgen/app.pl
	* tools/pdbgen/pdb/*.pdb: renamed argument flag