@@ -80,11 +80,11 @@ gimp_dnd_xds_source_set (GdkDragContext *context,
 
   D (g_printerr ("\ngimp_dnd_xds_source_set\n"));
 
-  property = gdk_atom_intern ("XdndDirectSave0", FALSE);
+  property = gdk_atom_intern_static_string ("XdndDirectSave0");
 
   if (image)
     {
-      GdkAtom  type     = gdk_atom_intern ("text/plain", FALSE);
+      GdkAtom  type     = gdk_atom_intern_static_string ("text/plain");
       gchar   *filename = gimp_image_get_filename (image);
       gchar   *basename;
 
@@ -120,8 +120,8 @@ gimp_dnd_xds_save_image (GdkDragContext   *context,
                          GtkSelectionData *selection)
 {
   GimpPlugInProcedure *proc;
-  GdkAtom              property = gdk_atom_intern ("XdndDirectSave0", FALSE);
-  GdkAtom              type     = gdk_atom_intern ("text/plain", FALSE);
+  GdkAtom              property;
+  GdkAtom              type;
   gint                 length;
   guchar              *data;
   gchar               *uri;
@@ -131,6 +131,9 @@ gimp_dnd_xds_save_image (GdkDragContext   *context,
   g_return_if_fail (GIMP_IS_IMAGE (image));
 
   D (g_printerr ("\ngimp_dnd_xds_save_image\n"));
+
+  property = gdk_atom_intern_static_string ("XdndDirectSave0");
+  type     = gdk_atom_intern_static_string ("text/plain");
 
   if (! gdk_property_get (context->source_window, property, type,
                           0, MAX_URI_LEN, FALSE,
